Added FAQs Page and updates navbars and contact page

--- a/About.html
+++ b/About.html
@@ -10,29 +10,45 @@
 
   <!-- Your main CSS -->
   <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<!-- ================= NAVBAR ================= -->
-<nav class="navbar navbar-expand-lg app-navbar">
+    <!-- ==============================
+            Navbar section 
+    ============================== -->
+     <nav class="navbar navbar-expand-lg custom-navbar sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand logo" href="./">ABD</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent">
+    <a class="navbar-brand logo"  href="#">ABD</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav gap-5 ms-auto gap-4">
-        <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
-        <li class="nav-item"><a class="nav-link active" href="About.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
-      </ul>
+      <ul class="navbar-nav gap-5 ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="About.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="FAQ.html">FAQs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Privacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Join</a>
+        </li>
     </div>
   </div>
 </nav>
+
 
 <!-- ================= HERO ================= -->
 <section class="about-hero container py-5">
