--- a/contact.html
+++ b/contact.html
@@ -10,26 +10,41 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <!-- Navbar Section  -->
-<nav class="navbar mynav navbar-expand-lg app-navbar sticky-top">
+    <!-- ==============================
+            Navbar section 
+    ============================== -->
+     <nav class="navbar navbar-expand-lg custom-navbar sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand logo" href="./">ABD</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent">
+    <a class="navbar-brand logo"  href="#">ABD</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav gap-5 ms-auto gap-4">
-        <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
-        <li class="nav-item"><a class="nav-link active" href="About.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
-      </ul>
+      <ul class="navbar-nav gap-5 ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="About.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="FAQ.html">FAQs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Privacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Join</a>
+        </li>
     </div>
   </div>
 </nav>
@@ -87,8 +102,8 @@
         <div class="card shadow-sm h-100">
           <div class="card-body">
             <h5 class="mb-4">Contact Information</h5>
-            <p><strong>Address:</strong><br>123 Business Street, City, Country</p>
-            <p><strong>Email:</strong><br>info@example.com</p>
+            <p><strong>Address:</strong><br>Near Sialkot baipass, Gujranwala, Pakistan</p>
+            <p><strong>Email:</strong><br>mabdullah9906@gmail.com</p>
             <p><strong>Phone:</strong><br>+1 234 567 890</p>
 
             <div class="map-responsive mt-4">
