--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">FAQs</a>
+          <a class="nav-link" href="FAQ.html">FAQs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Privacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Join</a>
         </li>
     </div>
   </div>
@@ -98,7 +107,7 @@
         <ul class="footer-links">
           <li><a href="./">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="#">FAQs</a></li>
         </ul>
       </div>
