--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav class="navbar navbar-expand-lg custom-navbar sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand logo"  href="#">ABD</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon togl-btn"></span>
+    <button class="navbar-toggler togl-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav gap-5 ms-auto mb-2 mb-lg-0">
